[gd_scene load_steps=10 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://ui.gd" type="Script" id=2]
[ext_resource path="res://data/current_player_data.tres" type="Resource" id=3]
[ext_resource path="res://addons/monogram/ttf/monogram-extended.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=3]
size = 56
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.313726, 0.486275, 0.760784, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.333333, 0.752941, 0.733333, 0.52549 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 4 )

[node name="Main" type="Node"]
script = ExtResource( 1 )
current_player_data = ExtResource( 3 )

[node name="UI" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="StartMenu" type="ColorRect" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.109804, 0.568627, 0.290196, 1 )

[node name="GameTitleLabel" type="Label" parent="UI/StartMenu"]
anchor_left = 0.5
anchor_top = 0.15
anchor_right = 0.5
anchor_bottom = 0.15
margin_left = -62.5
margin_right = 62.5
margin_bottom = 14.0
grow_horizontal = 2
grow_vertical = 2
text = "Ounces or Ounces?"

[node name="StartMenuButtons" type="VBoxContainer" parent="UI/StartMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -34.5
margin_top = -46.0
margin_right = 34.5
margin_bottom = 46.0

[node name="ContinueButton" type="Button" parent="UI/StartMenu/StartMenuButtons"]
margin_right = 69.0
margin_bottom = 20.0
disabled = true
text = "Continue"

[node name="LoadButton" type="Button" parent="UI/StartMenu/StartMenuButtons"]
margin_top = 24.0
margin_right = 69.0
margin_bottom = 44.0
disabled = true
text = "Load"

[node name="NewGameButton" type="Button" parent="UI/StartMenu/StartMenuButtons"]
margin_top = 48.0
margin_right = 69.0
margin_bottom = 68.0
text = "New"

[node name="QuitButton" type="Button" parent="UI/StartMenu/StartMenuButtons"]
margin_top = 72.0
margin_right = 69.0
margin_bottom = 92.0
text = "Quit"

[node name="CreatePlayerMenu" type="HBoxContainer" parent="UI/StartMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.5
margin_top = -20.0
margin_right = 171.5
margin_bottom = 20.0

[node name="PlayerNameLabel" type="Label" parent="UI/StartMenu/CreatePlayerMenu"]
margin_top = 13.0
margin_right = 89.0
margin_bottom = 27.0
text = "Player Name: "

[node name="NameInput" type="LineEdit" parent="UI/StartMenu/CreatePlayerMenu"]
margin_left = 93.0
margin_right = 243.0
margin_bottom = 40.0
rect_min_size = Vector2( 150, 10 )
align = 1
placeholder_text = "your name here"

[node name="CreatePlayerButton" type="Button" parent="UI/StartMenu/CreatePlayerMenu"]
margin_left = 247.0
margin_right = 343.0
margin_bottom = 40.0
text = "Create Player"

[node name="LevelOne" type="Node" parent="."]

[node name="WallBackground" type="ColorRect" parent="LevelOne"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.352941, 0.792157, 0.556863, 1 )

[node name="Table" type="ColorRect" parent="LevelOne"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -173.0
color = Color( 0.85098, 0.611765, 0.439216, 1 )

[node name="Jar" type="ColorRect" parent="LevelOne"]
anchor_left = 0.728
anchor_top = 0.401
anchor_right = 0.728
anchor_bottom = 0.401
margin_left = -162.84
margin_top = -162.72
margin_right = 162.16
margin_bottom = 162.28

[node name="Scale" type="ColorRect" parent="LevelOne"]
anchor_left = 0.728
anchor_top = 0.705
anchor_right = 0.728
anchor_bottom = 0.705
margin_left = -162.84
margin_top = -57.6
margin_right = 162.16
margin_bottom = 57.4
color = Color( 0.564706, 0.490196, 0.490196, 1 )

[node name="ScaleScreen" type="ColorRect" parent="LevelOne"]
anchor_left = 0.728
anchor_top = 0.705
anchor_right = 0.728
anchor_bottom = 0.705
margin_left = -150.84
margin_top = -34.6
margin_right = 149.16
margin_bottom = 25.4
color = Color( 0.882353, 0.815686, 0.843137, 1 )

[node name="ScaleLabel" type="Label" parent="LevelOne/ScaleScreen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_right = -10.0
grow_horizontal = 2
grow_vertical = 2
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "0.00 oz"
align = 2
valign = 1

[node name="Liquid" type="ProgressBar" parent="LevelOne"]
anchor_left = 0.727
anchor_top = 0.406
anchor_right = 0.727
anchor_bottom = 0.406
margin_left = -150.56
margin_top = 149.68
margin_right = 149.44
margin_bottom = 449.68
grow_horizontal = 2
grow_vertical = 2
rect_rotation = 270.0
custom_colors/font_color = Color( 0.494118, 0.796078, 0.188235, 1 )
custom_colors/font_color_shadow = Color( 0.152941, 0.352941, 0.87451, 1 )
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
value = 20.0
percent_visible = false

[node name="Recipe" type="ColorRect" parent="LevelOne"]
anchor_left = 0.282
anchor_top = 0.409
anchor_right = 0.282
anchor_bottom = 0.409
margin_left = -177.96
margin_top = -203.48
margin_right = 178.04
margin_bottom = 203.52

[node name="RichTextLabel" type="RichTextLabel" parent="LevelOne/Recipe"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 12.0
margin_top = 24.0
margin_right = -100.0
margin_bottom = -24.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Bloo Goo

- 3 oz Bloo puree
- 1 oz Bloo syrup
- 1 oz Bloo powder
- 1 oz Purble powder
- 1 oz Green powder
- 6 oz Bloo juice
- 2 oz Bloo conc."

[node name="VBoxContainer" type="VBoxContainer" parent="LevelOne/Recipe"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -78.0
margin_top = 81.0
margin_right = -18.0
margin_bottom = -129.0

[node name="HBoxContainer" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_right = 60.0
margin_bottom = 24.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer2" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 28.0
margin_right = 60.0
margin_bottom = 52.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer2"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer2"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer3" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 56.0
margin_right = 60.0
margin_bottom = 80.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer3"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer3"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer4" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 84.0
margin_right = 60.0
margin_bottom = 108.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer4"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer4"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer5" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 112.0
margin_right = 60.0
margin_bottom = 136.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer5"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer5"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer6" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 140.0
margin_right = 60.0
margin_bottom = 164.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer6"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer6"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="HBoxContainer7" type="HBoxContainer" parent="LevelOne/Recipe/VBoxContainer"]
margin_top = 168.0
margin_right = 60.0
margin_bottom = 192.0

[node name="CheckBox" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer7"]
margin_right = 24.0
margin_bottom = 24.0

[node name="CheckBox2" type="CheckBox" parent="LevelOne/Recipe/VBoxContainer/HBoxContainer7"]
margin_left = 28.0
margin_right = 52.0
margin_bottom = 24.0

[node name="Label" type="Label" parent="LevelOne/Recipe"]
anchor_left = 0.844
anchor_top = 0.138
anchor_right = 0.844
anchor_bottom = 0.138
margin_left = -31.464
margin_top = -10.166
margin_right = 31.536
margin_bottom = 9.834
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "(fl) oz"

[node name="TicketLine" type="Line2D" parent="LevelOne"]
points = PoolVector2Array( -130, 49, 87.8968, 52.9698, 364, 58, 645, 53, 1022.21, 49.7851, 1349, 47 )
width = 5.0
default_color = Color( 1, 0.921569, 0.4, 1 )
joint_mode = 1
begin_cap_mode = 2
end_cap_mode = 2

[node name="Clip" type="Line2D" parent="LevelOne/TicketLine"]
points = PoolVector2Array( 352, 32, 352, 129 )
width = 32.0
default_color = Color( 0.85098, 0.611765, 0.439216, 1 )

[connection signal="pressed" from="UI/StartMenu/StartMenuButtons/NewGameButton" to="UI" method="_on_NewGameButton_pressed"]
[connection signal="pressed" from="UI/StartMenu/StartMenuButtons/QuitButton" to="UI" method="_on_QuitButton_pressed"]
[connection signal="pressed" from="UI/StartMenu/CreatePlayerMenu/CreatePlayerButton" to="UI" method="_on_CreatePlayerButton_pressed"]
